# EAGE-Hackathon-2025-Instructions

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yaml  modal_mcp_servers.py  modal_ollama_serving.py  pyproject.toml
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy_mcp_servers.yaml  deploy_ollama.yaml  lint.yaml  run_tests.yaml  test.yaml
hello_world_mcp/: Dockerfile  __init__.py  pyproject.toml  server.py
hello_world_mcp/hello_world_mcp/: __init__.py
tests/: test_server.py
