[project]
name = "eage-annual-2025-hackathon"
version = "0.1.0"
description = "EAGE Annual 2025 Hackathon code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.76.4",
]

[tool.uv.workspace]
members = ["hello_world_mcp"]

[tool.uv.sources]
hello_world_mcp = { workspace = true }

[dependency-groups]
dev = [
    "hello_world_mcp",
    "pytest>=8.2.0",
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.4",
    "pre-commit>=3.7.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py311"
line-length = 88
extend-select = ["I"]
